# pm_plus_experiment

./: .gitignore  README.md  pyproject.toml
.github/instructions/: prompt.instructions.md
configs/: README.md
configs/defaults/: base.yaml  data.yaml  model.yaml  train.yaml
configs/experiments/: msp_attn_bilstm.yaml  msp_mtl_gru.yaml  msp_pooled_mlp.yaml  pm_plus_attn_bilstm.yaml  pm_plus_mtl_gru.yaml  pm_plus_pooled_mlp.yaml  pooled_mlp.yaml
data/: README.md
data/annotations/: MSP_Podcast_labels.csv
pretrained/: README.md
runs/: README.md
scripts/: README.md
scripts/preprocess/: extract_hubert.py  extract_wav2vec2.py
scripts/split/: split_pm_plus_by_gender.py
src/: README.md  infer.py  msp_train.py  pm_plus_train.py  train.py
src/data/: README.md  __init__.py  collate.py  dataset.py  loader.py
src/losses/: README.md  __init__.py  base.py  lccc.py
src/metrics/: README.md  __init__.py  base.py  ccc.py
src/models/: README.md  __init__.py  attn_bilstm.py  base_model.py  mtl_GRU_model.py  pooled_mlp.py
src/utils/: README.md  checkpoint.py  logger.py  visualization.py
