[project]
name = "pm_plus_experiment"
version = "0.1.0"
description = "pm_plus_experiment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "torchvision>=0.18.1",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "huggingface-hub>=0.34.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "nvitop>=1.5.3",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "openpyxl>=3.1.5",
    "soundfile>=0.13.1",
]

[project.urls]
Homepage = "https://github.com/Hex4C59/pm_plus_experiment"
Repository = "https://github.com/Hex4C59/pm_plus_experiment.git"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
